--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,4 +28,4 @@ services:
         class: AppBundle\Admin\TourDateAdmin
         arguments: [~, AppBundle\Entity\TourDate, ~]
         tags:
-            - { name: sonata.admin, manager_type: orm, label: TourDate }
+            - { name: sonata.admin, manager_type: orm, label: TourDate, show_in_dashboard: false }
